Fix image off screen on mobile

--- a/themes/unnawut/static/css/stylesheet.css
+++ b/themes/unnawut/static/css/stylesheet.css
@@ -32,6 +32,10 @@ blockquote {
   padding: 0 1rem;
 }
 
+img {
+  max-width: 100%;
+}
+
 figcaption h4 {
   font-size: 0.825rem;
   font-weight: normal;
